-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.0-beta2
-
None
-
e9d0083ccd80c1edd09fb1dd5e97d48585b5507f (qt-creator/qt-creator/4.8)
std::vector<QString> foo3 = {
{"foo"},
{"blah"},
{"foo"},
{"dfdfd"} -->> type here , };
If you type "," your get a line break. If you press CRTL+i it will be in one line again.
| For Gerrit Dashboard: QTCREATORBUG-21447 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 245069,3 | ClangFormat: Limit formatting with the cursor position | 4.8 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 245336,8 | ClangFormat: Do not format text but indent only | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |